# oars

./: Cargo.toml  README.md
src/: bakery.rs  client.rs  config.rs  error.rs  lib.rs  traits.rs
src/entities/: author.rs  common.rs  concept.rs  funder.rs  institution.rs  publisher.rs  source.rs  topic.rs  work.rs
testdata/: author.json  source.json
testdata/entities/: funder.json  institution.json  publisher.json  topic.json  work.json
