[package]
name = "oars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.4"
tokio = "1.37.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tempfile = "3.3.0"
assert-json-diff = "2.0.2"
